--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic/storage-angular": "^4.0.0",
     "android": "^0.0.8",
     "ionicons": "^7.0.0",
+    "prettier": "^3.0.3",
     "rxjs": "~7.8.0",
     "swiper": "^10.2.0",
     "tslib": "^2.3.0",
